styling: fixed alert styling
Also, I noticed there was an unmatch div (no closing div), so I tried deleting it. That led to an hour journey of messing around with the grid and flex setting. Sooooo much fun. Its good enough for now. David can probably do it better. Just dont make the window too small...

--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -28,7 +28,7 @@ body main{
     margin: 5px;                                                                          
 	margin-top: 0px;
     background-color: var(--background-color);                                            
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.34),0 17px 50px 0 rgba(0,0,0,0.29);            
+    /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.34),0 17px 50px 0 rgba(0,0,0,0.29);             */
     font-family: var(--main-font);                                                
 	display: flex;
 	align-items: center;
@@ -38,7 +38,7 @@ body main{
 
 .selected {
 	background-color: var(--button-hglt-color);
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.9);
+	/* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.9); */
 	color: var(--font-accent-color);
 }
 
@@ -110,7 +110,7 @@ button {
 
 .button-bundle {
 	display: grid;
-	width: 40vh;
+	width: 25vw;
 	/* height: 15vh; */
 }
 /*
